--- a/css/index.css
+++ b/css/index.css
@@ -17,9 +17,10 @@ body {
 
 h1 {
   display: block;
-  left: 2rem;
-  position: relative;
-  z-index: 999;
+  position: fixed;
+  top: 2rem;
+  right: 2rem;
+  z-index: 30;
   color: white;
   mix-blend-mode: difference;
   
@@ -64,7 +65,7 @@ nav {
   display: block;
   width: 200%;
   height: 200%;
-  z-index: 100;
+  z-index: 11;
 }
 
 
@@ -111,7 +112,7 @@ button{
   background-size: cover;
   border: 0.4rem dashed hsla(0, 0%, 60%, 0.61);
 
-  top: 90%;
+  top: 2rem;
   left: 1rem;
   z-index: 100;
   mix-blend-mode: difference;
@@ -146,14 +147,14 @@ button{
   
   position: absolute;
   right: 3rem;
-  top: 3rem;  
+  top: 8rem;  
   width: 75vw;
   height: auto;
   padding-right: 1rem;
   
   border: 0.5rem dashed gray;
   align-items: stretch;
-  z-index: 10;
+  z-index: 100;
   text-align: right;
   
 
@@ -178,11 +179,23 @@ button{
   text-shadow: lightblue 2px 4px 2px;
 }
 
+.links-list{
+  list-style: none;
+  padding-left: 0;
+  font-size: 1.6rem;
+}
+.links-list li { margin: 0.6rem 0; }
+.links-list a { color: #e6e6e6; text-decoration: none; }
+.links-list a:hover { text-decoration: underline; }
+.content iframe, #content iframe { border: 0; max-width: 420px; width: 100%; height: 180px; }
+
 @media only screen and (max-width: 800px) {
   #container{
     width: 90%;
     right: 5%;
+    top: 6rem;
+    font-size: 0.88;
   }
-  #content {font-size: 2.5rem;}
-  h1{left: 0px;}
+  #content {font-size: 2.2rem;}
+  h1{display: none;}
 }
