--- a/css/player.css
+++ b/css/player.css
@@ -1,14 +1,27 @@
+@import url('https://fonts.cdnfonts.com/css/sf-pro-display');
+
 *,
 *::before,
 *::after {
-  box-sizing: border-box;
-  margin: 0;
-  padding: 0;
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+}
+
+html, body {
+    height: 100%;
+    margin: 0;
+    padding: 0;
+    background: transparent;
 }
 
 .wrapper {
-    width: 100%;
-    display: block;
+        width: 100%;
+        height: 100%;
+        display: flex;
+        flex-direction: column;
+        justify-content: flex-end; /* push player to bottom of iframe */
+        font-family: 'SF Pro Display', sans-serif;
 }
 
 
@@ -20,10 +33,66 @@
 
 #timeline {
     position: absolute;
-    background-color: green;
+    background-color: rgb(247, 119, 0);
     height: 0.2rem;
     width: 100%;
     z-index: 100;
+}
+
+/* Small, subtle timeline head (range thumb) */
+#timeline {
+    -webkit-appearance: none;
+    appearance: none;
+}
+
+#timeline::-webkit-slider-runnable-track {
+    height: 0.2rem;
+    background: rgba(255,255,255,0.25);
+    border-radius: 2px;
+}
+
+#timeline::-webkit-slider-thumb {
+    -webkit-appearance: none;
+    appearance: none;
+    width: 6px;
+    height: 6px;
+    border-radius: 50%;
+    background: #ffffff;
+    border: none;
+    margin-top: -3px; /* center the thumb on the track */
+    box-shadow: none;
+    cursor: pointer;
+}
+
+#timeline::-moz-range-track {
+    height: 0.2rem;
+    background: rgba(255,255,255,0.25);
+    border-radius: 2px;
+}
+
+#timeline::-moz-range-thumb {
+    width: 6px;
+    height: 6px;
+    border-radius: 50%;
+    background: #ffffff;
+    border: none;
+    box-shadow: none;
+    cursor: pointer;
+}
+
+#timeline::-ms-track {
+    height: 0.2rem;
+    background: transparent;
+    border-color: transparent;
+}
+
+#timeline::-ms-thumb {
+    width: 6px;
+    height: 6px;
+    border-radius: 50%;
+    background: #ffffff;
+    border: none;
+    cursor: pointer;
 }
 
 .player {
@@ -32,7 +101,8 @@
     display: flex;
     width: 100%;
     gap: 0.2rem;
-    background-color: rgb(32,34,37);
+    height: 2.5rem;
+    background-color: rgba(32, 34, 37, 0.5);
 }
 
 /*BUTTONS*/
@@ -48,8 +118,14 @@ button {
 }
 
 /*ffw rew*/
-#rew {background-image: url(/player/images/rewind.png);}
-#ffw {background-image: url(/player/images/fast-forward.png);}
+#rew {
+    background-image: url(/player/images/rewind.png);
+    display: none !important;
+}
+#ffw {
+    background-image: url(/player/images/fast-forward.png);
+    display: none !important;
+}
 
 /*play pause controls*/
 .controls {
@@ -191,11 +267,26 @@ button {
 }
   
 ---------------------------------------------*/
+.infotext {
+    font-family: 'SF Pro Display', sans-serif;
+    font-size: 1rem;
+    color: white;
+    background-color: #121212;
+    margin: 0;
+    padding: 0;
+}
+
 
 .information {
     display: block;
     position: relative;
-    text-align: right;
+    text-align: left;
+}
+
+@media (max-width: 500px) {
+    .volumecontrol {
+        display: none !important;
+    }
 }
 
 @keyframes timeline {
